# pathfinder

./: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml  maze.txt  tarpaulin-report.html
.github/workflows/: ci.yml
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/pathfinder/: all.html  fn.find_path.html  fn.main.html  index.html  sidebar-items.js  struct.Point.html
doc/search.desc/pathfinder/: pathfinder-desc-0-.js
doc/src/pathfinder/: main.rs.html
doc/trait.impl/core/clone/: trait.Clone.js
doc/trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
doc/trait.impl/core/fmt/: trait.Debug.js
doc/trait.impl/core/hash/: trait.Hash.js
doc/trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
doc/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
examples/: maze.txt
src/: main.rs  maze_test.rs
